Changes in version 3.1.0:

* Issue 35: Lucene 3.1 compatible luke version (oss.akk)
* Issue 36: XMLExporter generating invalid XML, when special characters are present
  in a TermVector field (Craig.Stires)
* Issue 17: Recent changes to DocReconstructor sometimes cause null ref (solrtrey)

---------------------------------------------------------------------------
  Changes in v. 1.0.1 (released on 2010.04.01):

   This release upgrades to Lucene 3.0.1 jars.
     * New features and improvements:
          + Issue 5: Field value decoder for 32 bit numeric fields (float,
            int) missing.
          + Added support for XmlQueryParser.
          + Issue 12: Add option to specify custom XmlQueryParser.
     * Bug fixes:
          + Issue 3: Analyzer plugin (and analyzers) don't work.
          + Issue 4: Compress flag no longer available.
          + Issue 14: Error while using custom similarity.

  Changes in v. 1.0.0 (released on 2009.12.23):

   This release just upgrades to Lucene 3.0 jars.

  Changes in v. 0.9.9.1 (released on 2009.11.20):

   This release upgrades to Lucene 2.9.1 jars and Hadoop 0.20.1 jars.
     * New features and improvements:
          + Add per-field value decoders, for displaying field values that
            should be interpreted as numeric or date or binary values.
          + Improve the Analysis plugin to switch between the mixed and
            the only-new API.
          + Improve visibility and layout of Thinlet tables.
          + Add display of commit user data Map.
          + Add ability to edit per-commit user data Map
     * Bug fixes:
          + Term frequency vectors were not displayed for selected field
            (reported by Benjamin Heilbrunn).

  Changes in v. 0.9.9 (released on 2009.09.30):

   This release upgrades to Lucene 2.9.0 jars.
     * New features and improvements:
          + Luke can now open multiple indexes found in subdirectories one
            level below the selected directory.